fix member-list overflowing

--- a/assets/styles/default.css
+++ b/assets/styles/default.css
@@ -479,6 +479,7 @@ img.emoticon {
 }
 
 .member-list {
+	height: calc(100% - 61px);
 	overflow-y: auto;
 }
 
